--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.4",
     "diacritics": "^1.3.0",
     "express": "^4.16.2",
+    "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -18,7 +19,8 @@
     "styled-components": "^3.1.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p serve start-js",
     "build": "react-scripts build",
     "serve": "node serve.js",
     "test": "react-scripts test --env=jsdom",
